# oxen-storage-server

./: .clang-format  .drone.jsonnet  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CmakeLists.txt  Dockerfile  Makefile  README.md  install-deps-linux.sh  install-deps-macos.sh  mock_lokid.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
cmake/: DownloadLibSodium.cmake  Findsodium.cmake  GenVersion.cmake  StaticBuild.cmake  archive.cmake  check_atomic.cmake  check_for_std_filesystem.cmake  sqlite3_source.cmake
common/: CMakeLists.txt
common/include/: custom_formatters.h  dev_sink.h  loki_common.h  loki_logger.h  oxen_common.h  oxen_logger.h
common/src/: common.h  loki_logger.cpp  oxen_common.cpp  oxen_logger.cpp
contrib/: check_for_std_filesystem.cmake  drone-check-static-libs.sh  drone-format-verify.sh  drone-static-upload.sh  format.sh  omq-rpc.py  onion-request.cpp  quic-reach-test.cpp
crypto/: CMakeLists.txt
crypto/include/: channel_encryption.hpp  lokid_key.h  lokinet_identity.hpp  oxend_key.h  signature.h  signature.hpp
crypto/src/: channel_encryption.cpp  lokid_key.cpp  lokinet_identity.cpp  lokinet_identity.hpp  oxend_key.cpp  signature.cpp  test_main.cpp
debian/: changelog  ci-upload.sh  control  copyright  gbp.conf  install  loki-storage-server.install  loki-storage-server.links  loki-storage-server.maintscript  loki-storage-server.postinst  loki-storage-server.service  loki-testnet-storage-server.service  oxen-storage-server.install  oxen-storage-server.postinst  oxen-storage-server.service  oxen-testnet-storage-server.service  postint  rules  setup_boost.sh  storage-testnet.conf  storage.conf
debian/patches/: 0001-Devendor-loki-storage-server.patch  0001-Enhance-account-message-counts-admin-stats.patch  0001-Fix-missing-jemalloc-linking.patch  0001-Move-version-into-CMakeLists.txt-and-generate-versio.patch  0001-Partially-devendor-loki-storage-server.patch  0002-Add-check-for-latomic-needed-for-armhf-build.patch  0002-Add-systemd-notify-support.patch  0002-Bump-PATCH-to-9-for-pre-release-version.patch  0002-Devendor-lokimq.patch  0002-Re-vendor-spdlog.patch  0002-Revert-new-cpr-code-for-1.8.3-compatibility.patch  0002-Update-to-lmq-1.0.5-fix-compilation.patch  0002-build-static-boost-1.70.patch  0002-libfmt-8-compatibility-fixes.patch  0003-Don-t-count-single-message-boxes-as-accounts.patch  0003-Don-t-use-libsodium-internal-functions.patch  0003-Enable-LTO.patch  0003-Fix-get_used_bytes-to-subtract-free-pages.patch  0003-Fix-spdlog-compatibility.patch  0003-Old-cmake-sqlite-include-dir-workaround.patch  0003-Re-vendor-nlohmann_json.patch  0003-local-boost-update.patch  0004-Add-check-for-latomic-needed-for-armhf-build.patch  0004-Add-systemd-notify-support.patch  0004-Devendor-lokimq.patch  0004-Fix-fmt-linking.patch  0004-Use-system-nlohmann-json.patch  (+17 more)
httpserver/: CMakeLists.txt  Server.hpp  client_rpc_endpoints.cpp  client_rpc_endpoints.h  command_line.cpp  command_line.h  common.h  dns_text_records.cpp  dns_text_records.h  http.h  http_connection.cpp  http_connection.h  http_connection.hpp  https_client.cpp  https_client.h  https_server.cpp  https_server.h  ip_utils.cpp  ip_utils.h  lmq_server.cpp  lmq_server.h  main.cpp  net_stats.h  notifier.cpp  notifier.h  omq_server.cpp  omq_server.h  onion_processing.cpp  onion_processing.h  oxend_rpc.cpp  oxend_rpc.h  rate_limiter.cpp  rate_limiter.h  reachability_testing.cpp  reachability_testing.h  request_handler.cpp  request_handler.h  security.cpp  security.h  serialization.cpp  (+12 more)
network-tests/: README.md  conftest.py  pytest.ini  ss.py  subaccount.py  subkey.py  test_batch.py  test_big_retrieve.py  test_deletes.py  test_expire.py  test_ifelse.py  test_monitor.py  test_msg_ns.py  test_session_auth.py  test_store_retrieve.py  test_subaccount_auth.py  test_subkey_auth.py  util.py
oxenss/: CMakeLists.txt  version.cpp.in  version.h
oxenss/common/: CMakeLists.txt  format.h  formattable.h  mainnet.h  message.h  namespace.cpp  namespace.h  pubkey.cpp  pubkey.h  subaccount_token.h  type_list.h
oxenss/crypto/: CMakeLists.txt  channel_encryption.cpp  channel_encryption.hpp  keys.cpp  keys.h  signature.cpp  signature.h  subaccount.cpp  subaccount.h
oxenss/daemon/: CMakeLists.txt  command_line.cpp  command_line.h  oxen-storage.cpp
oxenss/logging/: CMakeLists.txt  dev_sink.h  oxen_logger.cpp  oxen_logger.h
oxenss/rpc/: CMakeLists.txt  client_rpc_endpoints.cpp  client_rpc_endpoints.h  onion_processing.cpp  onion_processing.h  oxend_rpc.cpp  oxend_rpc.h  rate_limiter.cpp  rate_limiter.h  request_handler.cpp  request_handler.h
oxenss/server/: CMakeLists.txt  https.cpp  https.h  mqbase.cpp  mqbase.h  omq.cpp  omq.h  omq_logger.cpp  omq_logger.h  omq_monitor.cpp  quic.cpp  quic.h  server_certificates.cpp  server_certificates.h  utils.cpp  utils.h
oxenss/snode/: CMakeLists.txt  reachability_testing.cpp  reachability_testing.h  serialization.cpp  serialization.h  service_node.cpp  service_node.h  sn_record.h  stats.cpp  stats.h  swarm.cpp  swarm.h
oxenss/storage/: CMakeLists.txt  database.cpp  database.hpp
oxenss/utils/: CMakeLists.txt  file.cpp  file.hpp  random.cpp  random.hpp  string_utils.cpp  string_utils.hpp  time.hpp
pow/: CMakeLists.txt
pow/include/: pow.hpp  utils.hpp
pow/src/: base64.cpp  pow.cpp
storage/: CMakeLists.txt
storage/include/: Database.hpp  Item.hpp  Storage.hpp
storage/src/: Database.cpp  DatabaseHandler.cpp  DatabaseHandler.hpp  Storage.cpp  Timer.hpp
tests/: conftest.py  ss.py  test_deletes.py  test_expire.py  test_store.py
unit_test/: CMakeLists.txt  command_line.cpp  encrypt.cpp  ip_utils.cpp  main.cpp  onion_requests.cpp  pow.cpp  rate_limiter.cpp  serialization.cpp  service_node.cpp  signature.cpp  storage.cpp  swarm.cpp
utils/: CMakeLists.txt
utils/include/: file.hpp  string_utils.hpp  time.hpp  utils.hpp
utils/src/: file.cpp  string_utils.cpp  utils.cpp
vendors/: CMakeLists.txt
vendors/loki/crypto-ops/: hash-ops.c
vendors/oxen/crypto-ops/: crypto-ops.c  crypto-ops.h  hash-ops.c
vendors/sqlite/: CMakeLists.txt  README.md
(+12 files in other folders)
